[package]
name = "trident-svm"
authors = ["Ackee Blockchain Security <hello@ackee.xyz>"]
version = "0.0.4"
edition = "2021"
repository = "https://github.com/Ackee-Blockchain/trident-svm"
license-file = "./LICENSE"
readme = "./README.md"
description = "Trident SVM implementation by Ackee Blockchain Security"

[dependencies]

# Solana
solana-sdk = "2.1"
solana-program-runtime = "2.1"
solana-sbpf = "0.10"

# Programs
solana-system-program = "2.1"
solana-bpf-loader-program = "2.1"
solana-vote-program = "2.1"
solana-stake-program = "2.1"
solana-config-program = "2.1"
solana-compute-budget-program = "2.1"
solana-address-lookup-table-program = "2.1"
solana-loader-v4-program = "2.1"

# Solana SVM
solana-svm = "2.1"
solana-compute-budget = "2.1"
solana-logger = "2.1"

# Misc
serde = { version = "1", default-features = false }
bincode = "1.3"
serde_json = "1.0"
shared_memory = "0.12"
agave-feature-set = "2.1"


# Syscall stubs
# [dependencies.trident-syscall-stubs-v1]
# path = "../trident-syscall-stubs/trident-syscall-stubs-v1"

# [dependencies.trident-syscall-stubs-v2]
# path = "../trident-syscall-stubs/trident-syscall-stubs-v2"

[dependencies.trident-syscall-stubs-v3]
path = "../trident-syscall-stubs/trident-syscall-stubs-v3"
