[package]
name = "trident-svm"
authors = ["Ackee Blockchain Security <hello@ackee.xyz>"]
version = "0.0.3"
edition = "2021"
repository = "https://github.com/Ackee-Blockchain/trident-svm"
license-file = "./LICENSE"
readme = "./README.md"
description = "Trident SVM implementation by Ackee Blockchain Security"

[features]
syscalls = ["syscall-v1", "syscall-v2"]

syscall-v1 = [
    "trident-syscall-stubs-v1",
    "solana_rbpf",
]
syscall-v2 = [
    "trident-syscall-stubs-v2",
    "solana_rbpf",
]

[dependencies]

# Solana
solana-sdk = "~2.0"
solana-program-runtime = "~2.0"

# Programs
solana-system-program = "~2.0"
solana-bpf-loader-program = "~2.0"
solana-vote-program = "~2.0"
solana-stake-program = "~2.0"
solana-config-program = "~2.0"
solana-compute-budget-program = "~2.0"
solana-address-lookup-table-program = "~2.0"
solana-loader-v4-program = "~2.0"

# Solana SVM
solana-svm = "~2.0"
solana-compute-budget = "~2.0"
solana-logger = "~2.0"


solana_rbpf = {version = "~0.8", optional = true}

# Misc
serde = { version = "1", default-features = false }
bincode = "1.3"
log = "0.4"

# Syscall stubs
[dependencies.trident-syscall-stubs-v1]
version = "0.0.1"
optional = true

[dependencies.trident-syscall-stubs-v2]
version = "0.0.1"
optional = true