[package]
name = "trident-svm"
authors = ["Ackee Blockchain Security <hello@ackee.xyz>"]
version = "0.2.0"
edition = "2021"
repository = "https://github.com/Ackee-Blockchain/trident-svm"
license-file = "./LICENSE"
readme = "./README.md"
description = "Trident SVM implementation by Ackee Blockchain Security"

[features]
syscalls = ["syscall-v2"]

syscall-v2 = [
    "trident-syscall-stubs-v2",
    "solana-sbpf",
    "solana-transaction-context",
    "solana-program-entrypoint",
]

[dependencies]

# Solana SVM
solana-svm = "2.3"
solana-svm-feature-set = "2.2"
solana-svm-callback = "2.2"
solana-program-runtime = "2.2"
solana-bpf-loader-program = "2.2"

solana-loader-v3-interface = "5"
solana-sdk-ids = "2.2"
solana-account = "2.2"
solana-pubkey = "2.2"
solana-sysvar = "2.2"
solana-sysvar-id = "2.2"
solana-keypair = "2.2"
solana-transaction-error = "2.2"
solana-transaction = {version = "2.2", features = ["blake3"]}
solana-clock = "2.2"
solana-rent = "2.2"
solana-signer = "2.2"
solana-epoch-rewards = "2.2"
solana-epoch-schedule = "2.2"
solana-hash = "2.2"
solana-slot-hashes = "2.2"
solana-slot-history = "2.2"
solana-stake-interface = "1"
solana-account-info = "2.2"
solana-instruction = "2.2"
solana-builtins = "2.2"
solana-compute-budget = "2.3"
solana-logger = "2.2"
solana-fee-structure = "2.2"

# agave-syscalls = "0" ## placeholder, might be used later

# Stubs
solana-sbpf = {version = "0.11", optional = true}
solana-transaction-context = {version = "2.2", optional = true}
solana-program-entrypoint = {version = "2.2", optional = true}

# Misc
serde = { version = "1", default-features = false }
bincode = "1.3"
log = "0.4"

[dependencies.trident-syscall-stubs-v2]
version = "0.1.0"
optional = true